{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 13,
  "lineage": "5c462314-7bad-7a9b-4a35-2cb2bb58a09f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353472581086:internet-gateway/igw-0178533469357cfe2",
            "id": "igw-0178533469357cfe2",
            "owner_id": "353472581086",
            "tags": {
              "Name": "example-igw"
            },
            "tags_all": {
              "Name": "example-igw"
            },
            "vpc_id": "vpc-014b20ccc6f2b44ef"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353472581086:route-table/rtb-03f9744e24faea680",
            "id": "rtb-03f9744e24faea680",
            "owner_id": "353472581086",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0178533469357cfe2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-014b20ccc6f2b44ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a75df8a1a227ff7f",
            "route_table_id": "rtb-03f9744e24faea680",
            "subnet_id": "subnet-0a7efc35193aee98f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353472581086:security-group/sg-05bc66128a897a0ae",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05bc66128a897a0ae",
            "ingress": [],
            "name": "terraform-20231026074933581800000004",
            "name_prefix": "terraform-",
            "owner_id": "353472581086",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example-security-group"
            },
            "tags_all": {
              "Name": "example-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-014b20ccc6f2b44ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353472581086:subnet/subnet-0a7efc35193aee98f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/16",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7efc35193aee98f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353472581086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-subnet"
            },
            "tags_all": {
              "Name": "example-subnet"
            },
            "vpc_id": "vpc-014b20ccc6f2b44ef"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353472581086:vpc/vpc-014b20ccc6f2b44ef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ecd176b2df818c4f",
            "default_route_table_id": "rtb-0a54691e1fefdd57d",
            "default_security_group_id": "sg-0fdc1c67da33809d9",
            "dhcp_options_id": "dopt-0bf14009b11189654",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-014b20ccc6f2b44ef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a54691e1fefdd57d",
            "owner_id": "353472581086",
            "tags": {
              "Name": "example-vpc"
            },
            "tags_all": {
              "Name": "example-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353472581086:security-group-rule/sgr-0fc39b450775905d5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0fc39b450775905d5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05bc66128a897a0ae",
            "security_group_rule_id": "sgr-0fc39b450775905d5",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353472581086:security-group-rule/sgr-0a410f50617048812",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a410f50617048812",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-05bc66128a897a0ae",
            "security_group_id": "sg-05bc66128a897a0ae",
            "security_group_rule_id": "sgr-0a410f50617048812",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group",
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}